force-app/main/default/objects/Payment_Allocation__c/Payment_Allocation__c.object-meta.xml
<CustomObject>
    <label>Payment Allocation</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Payment Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>