force-app/main/default/objects/Payment_Allocation__c/fields/Advance_Amount_Payment__c.field-meta.xml
<CustomField>
    <fullName>Advance_Amount_Payment__c</fullName>
    <description>Advance Amount Payment done by the guest.</description>
    <inlineHelpText>Advance Amount Payment done by the user.</inlineHelpText>
    <label>Advance Amount Payment</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>