force-app/main/default/objects/Payment_Allocation__c/fields/Customer_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoice__c</fullName>
    <label>Customer Invoice</label>
    <referenceTo>Customer_Invoice__c</referenceTo>
    <relationshipLabel>Payment Allocations</relationshipLabel>
    <relationshipName>Payment_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>