force-app/main/default/objects/Payment_Allocation__c/fields/Number_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payment__c</fullName>
    <displayFormat>PAY-{0000}</displayFormat>
    <label>Number of Payment</label>
    <type>AutoNumber</type>
</CustomField>